--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+group='com.github.stan0696'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
@@ -25,7 +25,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    compile 'org.jsoup:jsoup:1.9.2'
+    //implementation 'com.github.stan0696:PopulusGame:Tag'
+    implementation'org.jsoup:jsoup:1.9.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
