--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.TagSearchActivity"></activity>
+        <activity android:name=".User.UserSecretActivity"></activity>
+        <activity android:name=".View.TagSearchActivity" />
         <activity android:name=".Tools.fzDownloadActivity" />
         <activity android:name=".GameinfoActivity" />
         <activity android:name=".User.PasswordFindActivity" />
         <activity android:name=".User.PasswordChangeActivity" />
         <activity android:name=".User.UserLoginActivity" />
-        <activity android:name=".User.UserInfoActivity" />
+        <activity android:name=".User.UserInfoChangeActivity" />
         <activity android:name=".Tools.DownloadActivity" />
         <activity android:name=".Tools.SearchActivity" />
         <activity android:name=".View.FocusActivity" />
